<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.encrypt.EncryptFragment">

    <TextView
        android:id="@+id/choose_algorithm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/choose_encryption_algorithm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/methodSelect"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="1dp"
        app:endIconTint="@color/black"
        app:hintTextColor="@color/black"
        app:helperTextTextColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/choose_algorithm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:hint="pid@ras.ina">

        <AutoCompleteTextView
            android:id="@+id/methodsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInput"
        style="@style/EncryptionInputLayout"
        android:hint="@string/enter_text_to_encrypt"
        android:focusableInTouchMode="true"
        android:layout_marginTop="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/methodSelect">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text"
            style="@style/EncryptionEditText"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/keyInput"
        style="@style/EncryptionInputLayout"
        android:hint="@string/key"
        android:focusableInTouchMode="true"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInput">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/keyText"
            style="@style/EncryptionEditText"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/encryptButtom"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/encrypt"
        app:cornerRadius="32dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/keyInput"/>

    <TextView
        android:id="@+id/result_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/result"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/encryptButtom" />

    <ImageView
        android:id="@+id/copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_baseline_content_copy_24"
        app:layout_constraintStart_toEndOf="@id/result_title"
        app:layout_constraintBottom_toBottomOf="@id/result_title"
        app:layout_constraintTop_toTopOf="@id/result_title"/>


    <TextView
        android:id="@+id/result_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/result"
        android:textSize="18sp"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result_title"
        tools:text="ldkldflkfkdlfkdlkfldkfldkfldkfldkfldkfldfkdlfkdlfkdffdlfkdlfkd
kfldfdlfkldfkdlfkdlfkldfkdlfkdlfkdlfkdlfkldkfldkfldkfldkfldfkldkfldkfldkfldfkldfdkf;ldfkld
flkdlfkdlfkdlfkdlfkdlfkldfkldkfldkfldkfldkfldkfldfkdlfkdlfkldk" />

</androidx.constraintlayout.widget.ConstraintLayout>
